# AI-for-everyone

./: skill_体系文件全局协同维护1.md
humanizer-zh/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_GITHUB.md  pyproject.toml
humanizer-zh/.github/workflows/: ci.yml
humanizer-zh/batch_edit_agent/: README.md  __init__.py  apply_layer.py  cli.py  contracts.py  review_layer.py  search_layer.py  workflow.py
humanizer-zh/tests/: test_search_and_workflow.py
src/batch_replace/: __init__.py  __main__.py  cli.py
src/batch_replace/agents/: __init__.py  confirm_agent.py  execute_agent.py  locate_agent.py  search_agent.py
src/batch_replace/models/: __init__.py  change.py  match.py  result.py
src/batch_replace/ui/: __init__.py  console_ui.py  reporter.py
src/batch_replace/utils/: __init__.py  backup.py  file_utils.py
tests/fixtures/: 质量手册.md
tests/fixtures/程序文件/: PF-001-文件控制程序.md  PF-002-记录控制程序.md
